--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "googlebooks-app",
   "version": "1.0.0",
+  "type": "module",
   "description": "",
   "main": "server/server.js",
   "scripts": {
@@ -14,5 +15,9 @@
   "license": "ISC",
   "devDependencies": {
     "concurrently": "^5.1.0"
+  },
+  "dependencies": {
+    "@apollo/client": "^3.6.9",
+    "graphql": "^16.5.0"
   }
 }
